--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,15 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://smeasebackend-production.up.railway.app/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
   ],
   "env": {
-    "VITE_API_URL": "https://smeasebackend-production.up.railway.app"
+    "VITE_API_URL": "https://smeasebackend-production.up.railway.app/api"
   }
 }
